fix: padding correction on sections; buttons background-size correction on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -39,7 +39,6 @@ section {
     position: relative;
     margin: 0 auto;
     padding: 88px 32px 32px;
-    max-width: var(--max-width);
     min-height: 100vh;
 }
 
@@ -158,7 +157,7 @@ button {
 .button-secondary:hover {
     text-decoration: none;
     color: var(--color-secondary);
-    background-size: 600% 600%;
+    background-size: 100cqw 100cqw;
 }
 
 @media (min-width: 768px) {
@@ -169,6 +168,13 @@ button {
     .button-primary,
     .button-secondary {
         width: 256px;
+    }
+
+    .button-primary:hover,
+    .button-secondary:hover {
+        text-decoration: none;
+        color: var(--color-secondary);
+        background-size: 600% 600%;
     }
 }
 
